[gd_scene load_steps=24 format=3 uid="uid://bpev3in15e4e6"]

[ext_resource type="Script" path="res://entities/animals/animal.gd" id="1_lwbbo"]
[ext_resource type="Script" path="res://entities/animals/bird.gd" id="2_m0q8o"]
[ext_resource type="Texture2D" uid="uid://bcv2xox0qlwr6" path="res://assets/sprites/birdtemp.png" id="3_ammpp"]
[ext_resource type="Texture2D" uid="uid://dmjniyeiliayj" path="res://assets/sprites/animals/bird_eat.png" id="3_xvwtj"]
[ext_resource type="Texture2D" uid="uid://dys0agcgxw78l" path="res://assets/sprites/animals/bird_idle.png" id="4_43nb7"]
[ext_resource type="Texture2D" uid="uid://qb5o3yvaxhrt" path="res://assets/sprites/animals/bird_move.png" id="5_cttnu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gdoti"]
size = Vector2(7.555, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_1x1t2"]
atlas = ExtResource("3_xvwtj")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdxpa"]
atlas = ExtResource("3_xvwtj")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_kufk7"]
atlas = ExtResource("3_xvwtj")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxrj0"]
atlas = ExtResource("4_43nb7")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dotn"]
atlas = ExtResource("4_43nb7")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4vjr"]
atlas = ExtResource("5_cttnu")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjvtp"]
atlas = ExtResource("4_43nb7")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0ru7"]
atlas = ExtResource("5_cttnu")
region = Rect2(8, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_ccq1h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1x1t2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdxpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kufk7")
}],
"loop": true,
"name": &"Eat",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxrj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dotn")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4vjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjvtp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4vjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0ru7")
}],
"loop": true,
"name": &"Move",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ammpp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gvj48"]
size = Vector2(3, 7)

[sub_resource type="CircleShape2D" id="CircleShape2D_n0p4s"]
radius = 32.0

[sub_resource type="Animation" id="Animation_qiltk"]
resource_name = "Eat"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("CharacterBody2D/AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterBody2D/AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Eat"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharacterBody2D/AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}

[sub_resource type="Animation" id="Animation_xxihh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody2D/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Eat"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterBody2D/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_uw20v"]
resource_name = "Idle"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody2D/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterBody2D/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_hedxu"]
resource_name = "Move"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody2D/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Move"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterBody2D/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p6bom"]
_data = {
"Eat": SubResource("Animation_qiltk"),
"Idle": SubResource("Animation_uw20v"),
"Move": SubResource("Animation_hedxu"),
"RESET": SubResource("Animation_xxihh")
}

[node name="Bird" type="Node2D" groups=["Animal"]]
script = ExtResource("1_lwbbo")
favorite_plant_id = 2
eating_range = 0.1
health = 1
attack_speed = 1.0

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource("2_m0q8o")
speed = 15.0
attack_speed = 15.0
screen_exit_speed = 15.0
max_distance_from_plant = 3.0
knockback = 3.0
bullet_speed = 20.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_gdoti")
disabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
z_index = 1
sprite_frames = SubResource("SpriteFrames_ccq1h")
animation = &"Eat"

[node name="DealDamage" type="Area2D" parent="CharacterBody2D/AnimatedSprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/AnimatedSprite2D/DealDamage"]
position = Vector2(-2.5, 0.5)
shape = SubResource("RectangleShape2D_gvj48")

[node name="AttackRange" type="Area2D" parent="CharacterBody2D/AnimatedSprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/AnimatedSprite2D/AttackRange"]
shape = SubResource("CircleShape2D_n0p4s")

[node name="AttackSpeed" type="Timer" parent="CharacterBody2D"]
wait_time = 2.0
one_shot = true

[node name="RunAway" type="Timer" parent="CharacterBody2D"]
wait_time = 0.5
one_shot = true

[node name="FailedAttackReturnToPlant" type="Timer" parent="CharacterBody2D"]
wait_time = 1.3
one_shot = true

[node name="SelfDestructSequence" type="Timer" parent="CharacterBody2D"]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterBody2D"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_p6bom")
}

[node name="RecalculateMoveDir" type="Timer" parent="."]
wait_time = 2.0

[node name="EnterScreen" type="Timer" parent="."]
one_shot = true

[node name="ChooseRandomFavoritePlant" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="DropSeedTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="EatPlant" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="body_entered" from="CharacterBody2D/AnimatedSprite2D/DealDamage" to="CharacterBody2D" method="_on_deal_damage_body_entered"]
[connection signal="body_entered" from="CharacterBody2D/AnimatedSprite2D/AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="CharacterBody2D/AnimatedSprite2D/AttackRange" to="." method="_on_attack_range_body_exited"]
[connection signal="timeout" from="CharacterBody2D/AttackSpeed" to="CharacterBody2D" method="_on_attack_speed_timeout"]
[connection signal="timeout" from="CharacterBody2D/RunAway" to="CharacterBody2D" method="_on_run_away_timeout"]
[connection signal="timeout" from="CharacterBody2D/FailedAttackReturnToPlant" to="CharacterBody2D" method="_on_failed_attack_return_to_plant_timeout"]
[connection signal="timeout" from="CharacterBody2D/SelfDestructSequence" to="CharacterBody2D" method="_on_self_destruct_sequence_timeout"]
[connection signal="animation_finished" from="CharacterBody2D/AnimationPlayer" to="CharacterBody2D" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="RecalculateMoveDir" to="CharacterBody2D" method="_on_recalculate_move_dir_timeout"]
[connection signal="timeout" from="ChooseRandomFavoritePlant" to="." method="_on_choose_random_favorite_plant_timeout"]
[connection signal="timeout" from="DropSeedTimer" to="." method="_on_drop_seed_timer_timeout"]
[connection signal="timeout" from="EatPlant" to="." method="_on_eat_plant_timeout"]
